Fri May 24 17:28:41 UTC 2013  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/ProcessFactory.pm:

          Fixed fuzz error.

Thu May 23 21:01:04 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Attempting to fix Coverity warnings.

Thu May 23 19:39:50 UTC 2013  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/ProcessFactory.pm:
        * bin/PerlDDS/Run_Test.pm:

          Added TestTarget handling for VxWorks and cleaned up unused
          subroutines.

Wed May 22 17:49:05 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * docs/html/guidelines:
        * docs/html/guidelines/guidelines.html:

          Started a document describing development guidelines.

Tue May 21 16:39:02 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * README:

          Updated for next release.  As of now that will be 3.4.2.

Fri May 17 21:10:32 UTC 2013  Phillip LaBanca  <labancap@ociweb.com>

        * dds/DCPS/RTPS/Sedp.cpp:

          Added spdp shutdown checks to avoid race condition in task
          enqueue methods.

Tue May 14 21:18:14 UTC 2013  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/idl/metaclass_generator.cpp:

          Fix a code generation bug with typedefs of types like
          octets (char, wchar, boolean also) used in DCPS types.

        * tests/DCPS/Compiler/idl_test3_lib/FooDef.idl:

          Add a typedef-ed octet to this regression test.

        * tests/DCPS/Compiler/idl_test3_main/main.cpp:

          Manually adjust the marshaling and padding sizes for
          this test.

Mon May 13 14:25:17 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ManyTopicTest/publisher.cpp:
        * tests/DCPS/ManyTopicTest/subscriber.cpp:

          Fixed errors that only occurred on some compilers.

Fri May 10 16:18:06 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.h: