@@ -1,3 +1,9 @@
+Thu May 30 22:55:43 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>
+
+        * bin/run_dds.pl:
+
+          Updated to only include repo and svc config args when used.
+
 Fri May 24 17:28:41 UTC 2013  Brian Johnson  <johnsonb@ociweb.com>
 
         * bin/PerlDDS/ProcessFactory.pm:
